tdf#125011 large ui scaling factor overflows spinbutton range

Change-Id: I6e41318a92f02e3cd7fde5c52272582345362533
Reviewed-on: https://gerrit.libreoffice.org/71659
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>